# rust-movies

./: Cargo.toml  README.md
src/: db.rs  genres_db.rs  lib.rs  movies_db.rs  types.rs
tests/: movies.rs
