[package]
name = "movies"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
itertools = "0.11.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter", "ansi"] }
tracing-bunyan-formatter = "0.3.6"
